# test-matsuzawa-deepcode-20260206

./: README.md  package-lock.json  pyproject.toml
.github/actions/run-claude-code/: action.yml
.github/actions/run-deepcode/: action.yml
.github/actions/run-open-code/: action.yml
.github/workflows/: compile_latex.yml  deepcode.yml  opencode.yml  prepare_images_for_latex.yml  run_evaluation.yml  run_full_experiment.yml  run_trial_experiment.yml
.github/workflows/inputs/: design.json  prompt.txt
.research/opencode-results/: combined_prompt.txt  hypothesis.json
config/: config.yaml
config/runs/: c3-autocot-proposed.yaml  pir-autocot-baseline.yaml
src/: __init__.py  evaluate.py  main.py  model.py  preprocess.py  train.py
